--- a/glide.yaml
+++ b/glide.yaml
@@ -1,10 +1,10 @@
-package: github.com/tendermint/go-merkle
+package: github.com/intfoundation/go-merkle
 import:
-- package: github.com/tendermint/go-common
+- package: github.com/intfoundation/go-common
   version: develop
-- package: github.com/tendermint/go-db
+- package: github.com/intfoundation/go-db
   version: develop
-- package: github.com/tendermint/go-wire
+- package: github.com/intfoundation/go-wire
   version: develop
 - package: golang.org/x/crypto
   subpackages:
